--- a/text/supplemental_methods.Rmd
+++ b/text/supplemental_methods.Rmd
@@ -114,13 +114,75 @@ assign membership to the remaining tumors.
 cat("\\newpage")
 ```
 
+### Selection of pathways
+
+To understand the molecular mechanism of cancer at a pathway level, we used
+Reactome (https://reactome.org/), a knowledge-based pathway database. The
+mapping files of ENSEMBL genes to pathways, pathway hierarchy relationships, and
+complexes to top pathways were downloaded from
+https://reactome.org/download-data. Using these data, we imposed pathway
+criteria to define basic cellular processes and biochemical pathways: (1)
+human-derived pathways (\it{“HSA”}) (2) limited to grandchild node for each
+parent pathway (_e.g._ ‘Beta-catenin independent WNT signaling’ in ‘Signal
+Transduction’) (3) exclusion of pathways in the parent pathway: "Disease",
+"Muscle contraction", and "Reproduction" or pathway names that include any of
+the following keywords: "disease", "defect", "cancer", "oncogenic", "disorder",
+"mutant", "loss", "infection", "bacteria", or "listeria". While some of the
+excluded pathways have been shown to play an important role in cancer, they are
+highly specialized (_e.g._ "PI3K/AKT Signaling in Cancer"). Additionally, for
+most of the excluded pathways, a neutral version pathway of the pathway exists
+(_e.g._ "PIP3 activates Akt signaling"). Finally, we mapped the 18,577
+Ensembl IDs from the TCGA dataset to the highly selected Reactome pathways. This
+operation produced a lookup table that consisted of 377 pathways mapped to 8,940
+genes.
+
+### Filtering genes
+
+We filtered likely erroneous mutations due to transcription coupled repair. Our
+approach was to determine the status of each gene (_i.e._ expressed or not
+expressed) in each tissue type in order to exclude gene mutations low expressed
+enes. To do this, we obtained the TCGA RNA sequencing data adjusted for batch
+effect dataset (https://pancanatlas.xenahubs.net). Using the data, we removed
+the genes and tumor samples that were not included in our analysis, grouped the
+tumor samples by tissue type and computed the mean expression value for each
+gene. A minimum threshold of 10 transcripts per million was set for expressed
+genes based on an inflection point observed when plotting the mean expression
+values of genes ranked by expression in each tissue type. Genes that did not
+meet this threshold were considered not expressed. This operation produced a
+lookup table for gene expression status in each tumor sample for 18,127 genes.
+
+### Class and stage-specific Enrichment Calculations
+
+We calculated the enrichment of pathways in one set of tumors as the relative
+fraction of tumors (with estimated uncertainty) with a mutated gene in the
+pathway to all tumors, inclusive of the category of interest. To do this
+operation, we use the beta distribution to permute a posterior distribution on
+the fraction of tumors with a pathway mutated for each category based on the
+observed set, and compared this to the posterior obtained from the full set of
+tumors (all tumors) as the distribution of differences between all permuted
+samples. We considered a pathway enriched if the 95% range of credible
+differences thus obtained excludes 0 and the mean credible difference was
+greater than or equal to 30% enrichment, which excludes a large number of small
+differences that are not likely to be biologically relevant.
+
+
 ### Survival
 
-In order to understand how the diagnosis of cancer changes the expectation for
-longevity of patients, we first modeled the longevity of the overall population
-of the U.S. based on CDC life tables. Most TCGA cases are diagnosed late in
-life, so we fit a model that emphasizes accuracy in the right tail of the
-distribution. We modeled baseline longevity using a risk rate function:
+We used Bayesian inference to explore the relative impact of cancer diagnosis on
+survival at the time of diagnosis. Our model assumes that at birth each person
+has a small initial probability per unit time to die, and that this probability
+grows exponentially in time at some baseline rate that matches the observed CDC
+data. The rate of growth in risk is assumed to jump to a higher level at
+diagnosis, which we take as a proxy for onset. This represents an accelerated
+aging type model. To fit the model, we constrain the baseline risks using the
+available CDC life tables (ftp://ftp.cdc.gov/pub/Health_Statistics/NCHS/Publications/NVSR/68_07/). We also constrain the cancer specific multiplier
+using the longevity data within the cancer tumor dataset. Our model estimates
+the effect of cancer type and class-specific cancer effects independently,
+resulting in a cancer and class specific estimate of the aging rate multiplier.
+
+Most TCGA cases are diagnosed late in life, so we fit a model that emphasizes
+accuracy in the right tail of the distribution. We modeled baseline longevity
+using a risk rate function:
 
 $$R(t) = R_{20}\exp(a(A-20) + D(t) k a (\frac{t}{365}))$$ 
 
