--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -144,6 +144,7 @@ cat("\\newpage")
 ```
 #### Figure 1
 ```{r child='../code/figure1v2.Rmd'}
+#
 ```
 
 **Figure 1: Molecular pathway profiles of tumor samples with one or more
@@ -171,7 +172,8 @@ cat("\\newpage")
 ```
 
 #### Figure 2
-```{r, child='../code/figure2.Rmd'}
+```{r}
+#child='../code/figure2.Rmd'
 ```
 
 **Figure 2: Clustering of tumor samples** Different rotational perspectives of
@@ -206,6 +208,7 @@ cat("\\newpage")
 
 #### Figure 3
 ```{r child = '../code/figure3.Rmd'}
+#
 ```
 
 **Figure 3: Pathway-based clustering independent of tissue-of-origin** 
@@ -289,7 +292,8 @@ cat("\\newpage")
 ```
 
 #### Figure 4
-```{r child = '../code/figure4.Rmd'}
+```{r }
+#child = '../code/figure4.Rmd'
 ```
 
 **Figure 4: Somatic mutation frequencies for tumors in each class** 
@@ -355,6 +359,7 @@ cat("\\newpage")
 
 #### Figure 5
 ```{r child = '../code/figure5.Rmd'}
+#
 ```
 
 **Figure 5: Pan-cancer enrichment of pathway disruptions.** 
@@ -409,6 +414,7 @@ cat("\\newpage")
 
 #### Figure 6
 ```{r child = '../code/figure6.Rmd'}
+#
 ```
 
 **Figure 6: Gene level analysis reveals tissue-specific class signatures.** 
@@ -457,6 +463,7 @@ cat("\\newpage")
 
 #### Table 1
 ```{r child = '../code/table1.Rmd'}
+#
 ```
 
 **Table 1: Cluster-specific enriched pathways (effect size ≥ 0.30) in metastasis.**
@@ -464,6 +471,7 @@ cat("\\newpage")
 ### Pathway disruption clusters vary in short-term prognosis of survival
 
 ```{r child='survival.Rmd'}
+#
 ```
 
 ## Discussion
