--- a/code/figure1v2.Rmd
+++ b/code/figure1v2.Rmd
@@ -2,6 +2,8 @@
 output:
   word_document: default
   html_document: default
+editor_options: 
+  chunk_output_type: console
 ---
 ```{r, fig.width = 9, fig.height= 4}
 load("../data/cancer_disrupt_heatmap.Rda") ## Load  in data processed in figure1.Rmd
@@ -24,7 +26,9 @@ fig1 <- ggplot(data = cancer_disrupt_heatmap, aes(x=sample_id, y=path_name, fill
         legend.key.height = unit(1, "lines"),
         legend.text = element_text(size = 8),
         legend.margin=margin(0,0,0,0),
-        legend.box.margin=margin(-10,-10,0,-10)) 
+        legend.box.margin=margin(-10,-10,0,-10),
+        plot.margin = unit(c(0.6, -3, 0, 0), "cm"),
+        panel.background = element_rect(fill = "transparent")) 
 
 ## fixing the text cutoff in heatmap
  fig1 <- ggplotGrob(fig1)
@@ -34,5 +38,77 @@ fig1 <- ggplot(data = cancer_disrupt_heatmap, aes(x=sample_id, y=path_name, fill
  }
  
 fig1 <- as.ggplot(fig1) ## turn back fig into 
-fig1
 ```
+
+```{r fig.width = 9, fig.height= 6}
+# start new page
+plot.new()
+
+# setup layout
+gl <- grid.layout(nrow=2, ncol=3)
+
+## Setup viewports - How figures will be laid out
+vp.1 <- viewport(layout.pos.col=1:3, layout.pos.row=1)
+vp.2 <- viewport(layout.pos.col=1, layout.pos.row=2) 
+vp.3 <- viewport(layout.pos.col=2, layout.pos.row=2) 
+vp.4 <- viewport(layout.pos.col=3, layout.pos.row=2) 
+
+# init layout
+pushViewport(viewport(layout=gl))
+
+## vp.1 - Figure A - sankey plot
+pushViewport(vp.1) ## Enter vp.1 viewpoint
+print(fig1, newpage = FALSE) ## Plot ggplot
+mtext("A", side=3, line=3.15, cex=1.2, adj=-0.095)
+popViewport() ## Exit vp.1 viewpoint
+
+
+## Data for different perspectives of umap
+umap_cancertype <- data.table::fread("../data/umap_3d_coors.tsv") ## load data
+load("../data/kelly.colours.rda")
+cluster.colours <- c("grey", kelly.colours[c(3:12)]) ## Color scheme for cluster
+names(cluster.colours) <- c(0:10) ## assigning cluster to the colors
+
+theta <- c(0, 90, 270)
+phi <- c(65, 15, 15)
+## View 1
+pushViewport(vp.2)
+par(new=TRUE, fig=gridFIG())
+par(mar = c(0,0,0,0), mai=c(0.1,0.1,0.1,0.1), cex.lab = 0.8, cex = 0.8) ## setting plot parameters
+n <- 1
+with(umap_cancertype, scatter3D(plot_y, -plot_z, plot_x, 
+                                  bg = cluster.colours[as.character(clust_knn)], pch = 21, cex = 0.8, lwd = 0.2, # clust_knn is knn result
+                                  theta = theta[n], phi = phi[n], scale = T,
+                                  xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
+                                  colvar = NULL))
+title(xlab="UMAP 2", line=-1.5)
+mtext("B", side=3, line=-1.2, cex=1.2, adj=0)
+popViewport()
+## View 2
+pushViewport(vp.3)
+par(new=TRUE, fig=gridFIG())
+par(mar = c(0,0,0,0), mai=c(0.1,0.1,0.1,0.1), cex.lab = 0.8, cex = 0.8) ## setting plot parameters
+n <- 2
+with(umap_cancertype, scatter3D(plot_y, -plot_z, plot_x, 
+                                  bg = cluster.colours[as.character(clust_knn)], pch = 21, cex = 0.8, lwd = 0.2, # clust_knn is knn result
+                                  theta = theta[n], phi = phi[n], scale = T,
+                                  xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
+                                  colvar = NULL))
+popViewport()
+## View 3
+pushViewport(vp.4)
+par(new=TRUE, fig=gridFIG())
+par(mar = c(0,0,0,0), mai=c(0.1,0.1,0.1,0.1), cex.lab = 0.8, cex = 0.8) ## setting plot parameters
+n <- 3
+with(umap_cancertype, scatter3D(plot_y, -plot_z, plot_x, 
+                                  bg = cluster.colours[as.character(clust_knn)], pch = 21, cex = 0.8, lwd = 0.2, # clust_knn is knn result
+                                  theta = theta[n], phi = phi[n], scale = T,
+                                  xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
+                                  colvar = NULL))
+popViewport()
+
+
+
+
+```
+
