--- a/code/figure3.Rmd
+++ b/code/figure3.Rmd
@@ -41,12 +41,105 @@ sankey.plot <- ggplot(sankey.data,
         panel.background = element_rect(fill = "transparent"))
 ```
 
-```{r, fig.width= 6, fig.height= 6}
+```{r, message = FALSE}
+
+## Arranging mutation freq for each cluster
+mut_order <- list() ## store data in list 
+for(n in 1:max(as.numeric(as.character(umap_cancertype$clust_knn)))) { ## loop through all the clusters
+  mut_order[[n]] <- umap_cancertype %>% filter(clust_knn == n) %>%  ## filter for specific class
+    dplyr::select(sample_id, plot_x, plot_y, clust_knn, mut_count) %>% ## select relevant columns
+    arrange(mut_count) ## arrange mutation in increasing order
+}
+mut_order <- mut_order %>% do.call(rbind, .) %>% as.data.frame() ## rbind list
+
+## Convert sample_id and clust_knn into factor
+mut_order$sample_id <- factor(mut_order$sample_id, levels = mut_order$sample_id)
+mut_order$clust_knn <- factor(mut_order$clust_knn, levels = c(1:10))
+
+## Determining the breaks positions for the x-axis
+previous_class <- 0 ## starting position 1
+position_of_previous_class <- 0 ## starting position 2
+xaxis_breaks <- list() ## list for the for loop
+for(n in 1) { ## loop through 1 to 10 clusters
+  class_spec <- round(mut_order %>% filter(clust_knn == n) %>% nrow(.) / 2, digits = 0) ## calculate halfway mark of class 
+  xaxis_breaks[[n]] <- class_spec + previous_class + position_of_previous_class ## adding up all variables
+  previous_class <- class_spec ## storing class halfway mark
+  for(n in 2:max(as.numeric(as.character(mut_order$clust_knn)))) {
+    position_of_previous_class <- xaxis_breaks[[n-1]] ## getting the previous class position
+    class_spec <- round(mut_order %>% filter(clust_knn == n) %>% nrow(.) / 2, digits = 0) ## calculate halfway mark of new class
+    xaxis_breaks[[n]] <- class_spec + previous_class + position_of_previous_class ## adding up all variables
+    previous_class <- class_spec ## storing class halfway mark
+  }
+}
+xaxis_breaks <- as.data.frame(do.call(rbind, xaxis_breaks)) ## rbind list
+xaxis_breaks <- mut_order[rownames(mut_order) %in% xaxis_breaks$V1,] ## find the tumor samples in these positions
+
+total_n <- as.data.frame(table(mut_order$clust_knn)) ## getting total n in cluster
+
+mut_order$log10mut <- log10(mut_order$mut_count + 1) ## mutation count log transformation + pseudo count
+
+## Calculate median for each class
+mut_median <- mut_order %>% 
+  group_by(clust_knn) %>% 
+  dplyr::summarize(mut_med = median(log10mut)) 
+
+## Need to add 100 pseudo samples front and end of data so they don't touch the y-axis
+mut_order <- mut_order[,c("sample_id", "clust_knn", "log10mut")] ## selecting relevant column
+
+begin_NA <- data.frame(sample_id = paste0("sample", 1:100), 
+                       clust_knn = min(as.numeric(mut_order$clust_knn)), ## put lowest cluster to prevent a new facet
+                       log10mut = NA) ## put NA values so they don't get plotted
+end_NA <- data.frame(sample_id = paste0("sample", 101:200), ## repeat the step for the ends
+                       clust_knn = max(as.numeric(mut_order$clust_knn)),
+                       log10mut = NA)
+mut_order <- rbind(begin_NA, mut_order, end_NA) ## rbind the data in a specfic order
+
+mut_order$sample_id <- factor(mut_order$sample_id, levels = mut_order$sample_id) ## factor samples
+mut_order$clust_knn <- factor(mut_order$clust_knn, levels = c(1:10)) ## factor clusters
+
+fig1G <- ggplot(mut_order, aes(x = sample_id, y = log10mut, color = clust_knn)) + 
+  geom_point(size = 0.25) + 
+  ylab("Log10(Mutation Count)") + 
+  xlab("") +
+  theme_classic() +
+  facet_wrap(~ factor(clust_knn, levels = c(1:10)), ncol = 10, scales = "free_x") + ## facet by cluster
+  geom_hline(data= mut_median, aes(yintercept=mut_med)) + ## add median line
+  scale_y_continuous(sec.axis = sec_axis(~.)) + ## dup y-axis
+  scale_x_discrete(breaks = c(as.character(mut_order$sample_id[1]), as.character(xaxis_breaks$sample_id)), labels = c("n =" ,total_n$Freq)) +
+  theme(axis.text.x = element_text(size = 10),
+        axis.text.y = element_text(size = 10),
+        axis.title.x = element_text(size = 10),
+        axis.title.y = element_text(size = 10),
+        axis.ticks.x = element_blank(),
+        axis.line.x = element_line(colour = "black", size = 0.5),
+        axis.line.x.top = element_line(colour = "black", size = 0.5),
+        panel.spacing = unit(0.25, "lines"),
+        strip.background = element_rect(size = 0.5),
+        strip.placement = "outside",
+        strip.text.x = element_text(size = 10),
+        legend.position = "none") +
+  scale_color_manual(values = kelly.colours[-c(1:2)])
+
+## code to keep only the bottom border line of the facet
+fig1G <- ggplotGrob(fig1G)
+
+lg <- linesGrob(x=unit(c(0,1),"npc"), y=unit(c(0,0),"npc"), ## All lines off expect bottom line of facet
+                   gp=gpar(col="black", lwd=4))
+
+for (k in grep("strip-t",fig1G$layout$name)) { ## turn off 3 lines from the facet border text
+  fig1G$grobs[[k]]$grobs[[1]]$children[[1]] <- lg
+}
+
+fig1G <- as.ggplot(fig1G)
+```
+
+
+```{r, fig.width= 6, fig.height = 8}
 # start new page
 plot.new()
 
 # setup layout
-gl <- grid.layout(nrow=8, ncol=3)
+gl <- grid.layout(nrow=11, ncol=3)
 
 ## Setup viewports - How figures will be laid out
 vp.1 <- viewport(layout.pos.col=1:2, layout.pos.row=1:8)
@@ -54,6 +147,7 @@ vp.2 <- viewport(layout.pos.col=3, layout.pos.row=1:2)
 vp.3 <- viewport(layout.pos.col=3, layout.pos.row=3:4) 
 vp.4 <- viewport(layout.pos.col=3, layout.pos.row=5:6) 
 vp.5 <- viewport(layout.pos.col=3, layout.pos.row=7:8)
+vp.6 <- viewport(layout.pos.col=1:3, layout.pos.row=9:11)
 
 # init layout
 pushViewport(viewport(layout=gl))
@@ -61,7 +155,7 @@ pushViewport(viewport(layout=gl))
 ## vp.1 - Figure A - sankey plot
 pushViewport(vp.1) ## Enter vp.1 viewpoint
 print(sankey.plot, newpage = FALSE) ## Plot ggplot
-mtext("A", side=3, line=2.6, cex=1.2, adj=-0.17)
+mtext("A", side=3, line=2.6, cex=1, adj=-0.17)
 popViewport() ## Exit vp.1 viewpoint
 
 ## vp.2 - Figure B - BRCA subtype
@@ -91,7 +185,7 @@ legend("top", inset = c(0), legend=names(B_color[1:2]), col=B_color[1:2], pch = 
 legend("top", inset = c(0.07), legend=names(B_color[3:4]), col=B_color[3:4], pch = 20, bty = "n", horiz = T, cex = 0.8)
 legend("top", inset = c(0.14), legend=names(B_color[5:6]), col=B_color[5:6], pch = 20, bty = "n", horiz = T, cex = 0.8)
 title(xlab="UMAP 2", line=-0.25)
-mtext("B", side=3, line=-1.2, cex=1.2, adj=0)
+mtext("B", side=3, line=-1.2, cex=1, adj=0)
 
 popViewport() ## exit
 
@@ -132,7 +226,7 @@ with(brca %>% filter(mut_type != "NA"), ## Filter samples that do not have a mut
 legend("top", inset = c(0), legend=names(C_colors[c(1:2)]), col=C_colors[c(1:2)], pch = 20, bty = "n", horiz = T, cex = 0.8)
 legend("top", inset = c(0.07), legend=names(C_colors[c(3)]), col=C_colors[3], pch = 20, bty = "n", horiz = T, cex = 0.8)
 title(xlab="UMAP 2", line=-0.25)
-mtext("C", side=3, line=-1.2, cex=1.2, adj=0)
+mtext("C", side=3, line=-1.2, cex=1, adj=0)
 
 popViewport()
 
@@ -154,7 +248,7 @@ with(umap_cancertype %>% filter(ajcc_pathologic_tumor_stage != "Not Available"),
 legend("top", inset = c(0), legend=names(D_colors[1:2]), col=D_colors[1:2], pch = 20, bty = "n", horiz = T, cex = 0.8)
 legend("top", inset = c(0.07), legend=names(D_colors[3:4]), col=D_colors[3:4], pch = 20, bty = "n", horiz = T, cex = 0.8)
 title(xlab="UMAP 2", line=-0.25)
-mtext("D", side=3, line=-1.2, cex=1.2, adj=0)
+mtext("D", side=3, line=-1.2, cex=1, adj=0)
 
 popViewport()
 
@@ -174,7 +268,13 @@ with(umap_cancertype %>% filter(ajcc_metastasis_pathologic_pm %in% c("M0", "M1")
 ## Axis labels
 legend("top", inset = c(0), legend=names(E_colors), col=E_colors, pch = 20, bty = "n", horiz = T, cex = 0.8)
 title(xlab="UMAP 2", line=-0.25)
-mtext("E", side=3, line=-1.2, cex=1.2, adj=0)
+mtext("E", side=3, line=-1.2, cex=1, adj=0)
 
 popViewport()
+
+## vp.1 - Figure A - sankey plot
+pushViewport(vp.6) ## Enter vp.1 viewpoint
+print(fig1G, newpage = FALSE) ## Plot ggplot
+mtext("F", side=3, line=-9.8, cex=1, adj=-2.4)
+popViewport() ## Exit vp.1 viewpoint
 ```
